--- a/css/main.css
+++ b/css/main.css
@@ -14,12 +14,54 @@ header{
 	background: #FFF;
 }
 
-nav{
+div#navWrap{
 	width: 100%;
 	height: 50px;
 	background: #F70;
 }
 
+nav{
+	width: 1000px;
+	height: 100%;
+	margin: 0 auto;
+}
+
+nav > ul{
+	display: block;
+	height: 100%;
+	float: left;
+}
+
+nav > ul > li{
+	display:block;
+	float: left;
+	height: 100%;
+	line-height: 50px;
+	vertical-align: middle;
+	font-family: 'Roboto', sans-serif;
+	color: #FFF;
+	transition: 0.3s;
+}
+
+nav > ul > li:hover{
+	background: #FFF;
+	color: #F70;
+}
+
+nav > ul > li > a{
+	display: block;
+	padding: 0px 20px;
+	height: 100%;
+	color: inherit;
+	text-decoration: none;
+}
+
+div#navImg{
+	width: 50px;
+	height: 50px;
+	float: left;
+	background: #ff0;
+}
 div.wrapper{
 	width: 1000px;
 	padding: 0px 20px;
