--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Sacramento');
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script|Sacramento|Satisfy');
 *{
 	margin: 0px;
 	padding: 0px;
@@ -12,6 +14,35 @@ header{
 	width: 100%;
 	height: 75px;
 	background: #FFF;
+}
+
+header div#logo{
+	height: 75px;
+	width: 75px;
+	float:left;
+}
+
+header div#name{
+	padding-top: 5px;
+	height: 40px;
+	width: 400px;
+}
+
+header div#name h1{
+	font-size: 25px;
+    font-family: 'Lora', serif;
+}
+
+header div#nameCursive{
+	height: 35px;
+	width: 400px;
+}
+
+header div#nameCursive p{
+	font-size: 20px;
+    font-family: 'Sacramento', cursive;
+    font-family: 'Dancing Script', cursive;
+    font-family: 'Satisfy', cursive;
 }
 
 div#headWrap{
