Moved roboto from the index  to the main css. That way everyone can use the font.

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Sacramento');
 @import url('https://fonts.googleapis.com/css?family=Satisfy');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 body{
 	background: url(../img/background.jpg) no-repeat center center fixed;
