--- a/css/contact.css
+++ b/css/contact.css
@@ -21,22 +21,25 @@ label
 textarea 
 {
 	width:439px;
-	height:27px;
+	height:30px;
 	background:#efefef;
 	border:1px solid #dedede;
 	padding:10px;
 	margin-top:3px;
 	font-size:0.9em;
 	color:#3a3a3a;
+	
 }
 input
 {
-	margin-left: 400px;
-	margin-top: 20px;
-	height: 50px;
+	margin-left: 360px;
+	margin-top: 15px;
+	height: 40px;
+	border-radius: 10px;
 	padding:10px;
-	font-size:32px;
+	font-size:18px;
 	color:#3a3a3a;
+
 }
 #comment
 {
