--- a/css/courses.css
+++ b/css/courses.css
@@ -4,13 +4,25 @@
 
 #electricalEngineering{
 	height: 200px;
-	width: 600px;
-	background: url(../img/electronicMusic.jpg);
+	width: 625px;
+	background-image: url(../img/electricalEngineering.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
 	margin: auto;
+}
+#ex{
+	height: 200px;
+	width: 625px;
+	background-color: rgba(209, 58, 41, .8);
+	transition: background-color 0.5s;
+}
+#ex:hover{
+	background-color: rgba(209, 58, 41, .5);
 }
 
 #electricalEngineering h2{
 	color: white;
 	text-align: center;
-	line-height: 200px;
+	line-height: 200px; 
 }
+
