--- a/css/main.css
+++ b/css/main.css
@@ -252,13 +252,17 @@ div.overlay{
 	height:100%;
 	background:rgba(255,255,255,0.75);
 	text-align: center;
-	vertical-align: middle;
-	line-height: 250px;
 	color: #F70;
 	font-family: 'Roboto Slab', serif;
 	font-size: 35px;
 	font-weight: bold;
 	transition: 0.5s;
+}
+div.overlay p{
+position: relative;
+top: 50%;
+transform: translateY(-50%);
+
 }
 
 .overlay:hover{
