--- a/css/courses.css
+++ b/css/courses.css
@@ -4,6 +4,30 @@
 b{
 	font-weight: bold;
 }
+div.overlayNoTransition{
+	width:100%;
+	height:100%;
+	background:rgba(255,255,255,0.75);
+	text-align: center;
+	color: #F70;
+	font-family: 'Roboto Slab', serif;
+	font-size: 35px;
+	font-weight: bold;
+}
+div.overlayNoTransition p{
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+}
+#general{
+	height: 200px;
+	width: 625px;
+	background-image: url(../img/gen.gif);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	margin: 10px auto;
+}
 #electricalEngineering{
 	height: 200px;
 	width: 625px;
@@ -11,7 +35,7 @@ b{
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
-	margin: 10px auto;
+	margin: 0 auto;
 }
 #informationTechnology{
 	height: 200px;
@@ -31,7 +55,7 @@ b{
 }
 
 article > h2{
-	margin-top: 30px;
+	margin-top: 15px;
 }
 
 
