--- a/css/courses.css
+++ b/css/courses.css
@@ -4,6 +4,20 @@
 b{
 	font-weight: bold;
 }
+
+article > h2{
+	margin-top: 15px;
+}
+
+.banner{
+	height: 200px;
+	width: 625px;
+	margin: 10px auto;	
+	background-position: 0 -70px;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
 div.overlayNoTransition{
 	width:100%;
 	height:100%;
@@ -14,58 +28,39 @@ div.overlayNoTransition{
 	font-size: 35px;
 	font-weight: bold;
 }
+
 div.overlayNoTransition p{
 	position: relative;
 	top: 50%;
 	transform: translateY(-50%);
 }
+
+#electronicMusic{
+	background-image: url(../img/ed.gif);
+
+}
+
+#classicalInstruments{
+	background-image: url(../img/class.gif);
+}
+
 #apply{
-	height: 200px;
-	width: 625px;
 	background-image: url(../img/form.gif);
-	background-position: 0 -70px;
-	background-size: cover;
-	background-repeat: no-repeat;
-	margin: 10px auto;
 }
+
 #general{
-	height: 200px;
-	width: 625px;
 	background-image: url(../img/gen.gif);
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-	margin: 10px auto;
 }
+
 #electricalEngineering{
-	height: 200px;
-	width: 625px;
 	background-image: url(../img/ele2.gif);
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-	margin: 0 auto;
 }
+
 #informationTechnology{
-	height: 200px;
-	width: 625px;
 	background-image: url(../img/it.gif);
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-	margin: 10px auto;
-}
-.overlay p{
-	transition: opacity 1.5s;
 }
 
-.overlay:hover p{
-	opacity: .3;
-}
 
-article > h2{
-	margin-top: 15px;
-}
 
 
 
