--- a/css/courses.css
+++ b/css/courses.css
@@ -23,15 +23,6 @@ article ul li{
 }
 
 
-.banner{
-	height: 200px;
-	width: 625px;
-	margin: 10px auto;	
-	background-position: 0 -70px;
-	background-size: cover;
-	background-repeat: no-repeat;
-}
-
 div.overlayNoTransition{
 	width:100%;
 	height:100%;
@@ -49,6 +40,15 @@ div.overlayNoTransition p{
 	transform: translateY(-50%);
 }
 
+.banner{
+	height: 200px;
+	width: 625px;
+	margin: 10px auto;	
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
 #electronicMusic{
 	background-image: url(../img/electronicMusic.gif);
 }
@@ -57,11 +57,11 @@ div.overlayNoTransition p{
 	background-image: url(../img/classicalInstruments.gif);
 }
 
-#apply{
+#howToApply{
 	background-image: url(../img/apply.gif);
 }
 
-#general{
+#generalRequirements{
 	background-image: url(../img/generalRequirements.gif);
 }
 
