Added the news in het sidebar. Added all the news in the sidebar to all the pages (italian pages need translation). Also added style to main for the sidebar to work and get longer properly. I put a comment above the style I added. Tomorrow I will work on: Clicking on sidebar newsitem will direct you to news page. Maybe the photo upload gallery. Depends on our groupwork meeting

--- a/css/news.css
+++ b/css/news.css
@@ -14,14 +14,16 @@ div#content article h1{
 	font-size: 25px;
 	color: #FF6600;
 	float: left;
+	width: 100%;
 }
 div#content article span{
-	float: right;
+	float: left;
 	color: #929292;
+	margin-top: 5px;
 }
 
 div#content article p{
-	margin-top: 5px;
+	margin-top: 20px;
 }
 
 aside{
@@ -48,4 +50,5 @@ aside div div.newsitem_sidebar h3{
 }
 aside div div.newsitem_sidebar p{
 	font-size: 14px;
+	margin-top: 5px;
 }
