News sidebar margins changed

--- a/css/main.css
+++ b/css/main.css
@@ -198,7 +198,7 @@ aside div div.newsitem_sidebar h3{
 }
 aside div div.newsitem_sidebar p{
 	font-size: 14px;
-	margin-top: 5px;
+	margin: 20px 0 10px 0;
 }
 /*END STUFF KARIN ADDED*/
 
