--- a/css/news.css
+++ b/css/news.css
@@ -22,6 +22,9 @@ aside{
 aside div {
 	float: left;
 }
+aside div img {
+	float: right;
+}
 aside div div.newsitem_sidebar{
 	min-height: 60px;
 	height: auto;
