--- a/css/main.css
+++ b/css/main.css
@@ -161,9 +161,12 @@ aside > div > div{
 	padding: 20px 0px;
 }
 
-aside > div > div > img{
+.socialimg{
 	height: 100%;
 }
+
+
+
 
 article{
 	width:100%;
@@ -180,9 +183,7 @@ aside{
 aside div {
 	float: left;
 }
-aside div a img {
-	float: right;
-}
+
 aside div div.newsitem_sidebar{
 	min-height: 60px;
 	height: auto;
