--- a/css/photos.css
+++ b/css/photos.css
@@ -1,4 +1,14 @@
-article{
+div#login{
+    float: right;
+    margin-top:15px;
+    line-height: 27px;
+    padding-right: 20px;
+    color: #929292;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+}
+
+article.shorter{
     min-height: 130px;
 }
 form{
@@ -33,6 +43,12 @@ article div{
     width: 300px;
     height: 200px;
 }
-article div img{
-    object-fit: contain;
+article div:nth-child(even){
+    margin-left: 25px;
 }
+article div img{
+    height: 200px;
+    width: 300px;
+    object-fit: cover;
+}
+
