Finished the file uploader + backend system for approving the images. Also fixed some minor stuff in the html and css -> Id's were used in the wrong context. Id may only be used for 1 unique item over all the pages you have -> font sacremento was imported, but not used anywhere -> Put the font roboto on the body, so you only have to "call" it once -> Also deleted Ioana's inline style. (it was already in her css file)

--- a/css/about.css
+++ b/css/about.css
@@ -17,7 +17,7 @@
 	top:1px;
 }
 
-#content input[type=button]{
+.content input[type=button]{
     border: 0;
     background: rgba(255,0,0,0);
     color: black;
