--- a/css/photos.css
+++ b/css/photos.css
@@ -4,15 +4,17 @@ div#login{
     line-height: 27px;
     padding-right: 20px;
     color: #929292;
-    font-family: 'Roboto', sans-serif;
     font-size: 14px;
 }
-
+article{
+    float: left;
+    padding-bottom: 0;
+}
+article p{
+    padding: 0;
+}
 article.shorter{
     min-height: 130px;
-}
-form{
-    font-family: 'Roboto', sans-serif;
 }
 form p{
     height: 26px;
@@ -20,7 +22,7 @@ form p{
 p.small{
     font-size: 12px;
     color: #929292;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 form input[type='submit'] {
@@ -42,6 +44,8 @@ article div{
     float: left;
     width: 300px;
     height: 200px;
+    margin-bottom: 20px;
+    box-shadow: 4px 4px 36px -8px rgba(0,0,0,0.4);
 }
 article div:nth-child(even){
     margin-left: 25px;
