--- a/css/contact.css
+++ b/css/contact.css
@@ -1,71 +1,30 @@
-.contact
-{
-	font-size: 28px;
-	margin-bottom: 15px;
-}
-.contents
-{
-	font-size: 18px;
-	width: 100%;
-	text-align: justify;
-	float: left;
-	margin-top: 10px;
+label{
+	display: block;
+	margin-bottom: 5px;
 }
 
-label 
-{
-    display:block;
-    margin-top:20px;
-    letter-spacing:2px;
-    margin-bottom: 10px;
-    text-align: left;
-    margin-left: 90px;
+textarea{
+	width: 400px;
+	height: 200px;
+	border: 1px solid #F70;
+	padding: 5px;
+	max-width: 100%;
 }
-textarea 
-{
-	width:439px;
-	height:30px;
-	background:#efefef;
-	border:1px solid #dedede;
-	padding:10px;
-	margin-top:3px;
-	font-size:0.9em;
-	color:#3a3a3a;
-	resize: none;
-	
-	
-}
-input
-{
-	margin-left: 360px;
-	margin-top: 15px;
-	height: 40px;
-	border-radius: 10px;
-	padding:10px;
-	font-size:18px;
-	color:#3a3a3a;
 
+input{
+	width: 400px;
+	border: 1px solid #F70;
+	padding: 5px;
 }
-#comment
-{
-	height: 70px;
+
+#submit{
+	width: 120px;
+	border: 1px solid #F70;
+	padding: 5px;
 }
-.form
-{
-	margin-top: 10px;	
+
+td{
+	height: 25px;
+	width: 120px;
 }
-#days,#hours
-{
-	float: left;
-	margin-right: 30px;
-}
-li
-{
-	margin-bottom: 10px;
-}
-#blank
-{
-	float: left;
-	height: 40px;
-	width: 100%;
-}
+
