--- a/css/main.css
+++ b/css/main.css
@@ -324,3 +324,44 @@ a:visited{
 	text-decoration: none;
 	color: inherit;
 }
+
+#openDay{
+
+}
+
+#openDay > input{
+	width: 100%;
+	border: 1px solid #FFF;
+	padding: 5px;
+	margin: 5px 0px;
+	background-color: #F70;
+	color: #FFF;
+}
+
+::-webkit-input-placeholder { /* Chrome */
+  color: #FFF;
+  opacity: 0.6;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: #FFF;
+  opacity: 0.6;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: #FFF;
+  opacity: 0.6;
+}
+:-moz-placeholder { /* Firefox 4 - 18 */
+  color: #FFF;
+  opacity: 0.6;
+}
+
+#openDaySubmit{
+	width: 100px!important;
+	float: right;
+	transition: 0.3s;
+}
+
+#openDaySubmit:hover{
+	background-color: #FFF;
+	color: #F70;
+}
