--- a/css/main.css
+++ b/css/main.css
@@ -338,19 +338,19 @@ a:visited{
 	color: #FFF;
 }
 
-::-webkit-input-placeholder { /* Chrome */
+#openDay >::-webkit-input-placeholder { /* Chrome */
   color: #FFF;
   opacity: 0.6;
 }
-:-ms-input-placeholder { /* IE 10+ */
+#openDay >:-ms-input-placeholder { /* IE 10+ */
   color: #FFF;
   opacity: 0.6;
 }
-::-moz-placeholder { /* Firefox 19+ */
+#openDay >::-moz-placeholder { /* Firefox 19+ */
   color: #FFF;
   opacity: 0.6;
 }
-:-moz-placeholder { /* Firefox 4 - 18 */
+#openDay >:-moz-placeholder { /* Firefox 4 - 18 */
   color: #FFF;
   opacity: 0.6;
 }
@@ -364,4 +364,5 @@ a:visited{
 #openDaySubmit:hover{
 	background-color: #FFF;
 	color: #F70;
+	cursor: pointer;
 }
