Everything validated. no errors anymore. And fixed the input with important. So it doesn't use that anymore

--- a/css/photos.css
+++ b/css/photos.css
@@ -39,6 +39,18 @@ form input[type='submit']:hover{
 form input[type='submit']:focus{
     outline: none;
 }
+.openDay input[name="submit"]{
+    width: 100px;
+    float: right;
+    transition: 0.3s;
+    background: transparent;
+}
+
+.openDay input[name="submit"]:hover {
+    background-color: #FFF;
+    color: #F70;
+    cursor: pointer;
+}
 
 article div{
     float: left;
