--- a/css/main.css
+++ b/css/main.css
@@ -325,11 +325,7 @@ a:visited{
 	color: inherit;
 }
 
-#openDay{
-
-}
-
-#openDay > input{
+.openDay input{
 	width: 100%;
 	border: 1px solid #FFF;
 	padding: 5px;
@@ -338,30 +334,30 @@ a:visited{
 	color: #FFF;
 }
 
-#openDay >::-webkit-input-placeholder { /* Chrome */
+.openDay >::-webkit-input-placeholder { /* Chrome */
   color: #FFF;
   opacity: 0.6;
 }
-#openDay >:-ms-input-placeholder { /* IE 10+ */
+.openDay >:-ms-input-placeholder { /* IE 10+ */
   color: #FFF;
   opacity: 0.6;
 }
-#openDay >::-moz-placeholder { /* Firefox 19+ */
+.openDay >::-moz-placeholder { /* Firefox 19+ */
   color: #FFF;
   opacity: 0.6;
 }
-#openDay >:-moz-placeholder { /* Firefox 4 - 18 */
+.openDay >:-moz-placeholder { /* Firefox 4 - 18 */
   color: #FFF;
   opacity: 0.6;
 }
 
-#openDaySubmit{
-	width: 100px!important;
+.openDay .openDaySubmit{
+	width: 100px;
 	float: right;
 	transition: 0.3s;
 }
 
-#openDaySubmit:hover{
+ .openDaySubmit:hover{
 	background-color: #FFF;
 	color: #F70;
 	cursor: pointer;
